# server/app/admin/model/sys_gen_table.go
@@ -11,8 +11,6 @@ type SysGenTable struct {
 	ModelName        string `json:"modelName" gorm:"comment:实体名称"`
 	BusinessName     string `json:"businessName" gorm:"comment:业务名称"`
 	ModuleName       string `json:"moduleName" gorm:"comment:模块名称"`
-	FunctionName     string `json:"functionName" gorm:"comment:功能名称"`
-	ParamName        string `json:"paramName" gorm:"comment:参数名称"`
 	MenuParentId     int64  `json:"menuParentId" gorm:"comment:上级菜单"`
 	common.BaseModel
 }
