# server/docs/swagger.json
@@ -2063,41 +2063,6 @@
                     }
                 }
             }
-        },
-        "/test/demo": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "tags": [
-                    "测试"
-                ],
-                "summary": "测试demo",
-                "parameters": [
-                    {
-                        "description": "表名",
-                        "name": "tableNames",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/response.JsonResult"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -2698,9 +2663,9 @@
                     "description": "业务名称",
                     "type": "string"
                 },
-                "functionName": {
-                    "description": "功能名称",
-                    "type": "string"
+                "menuParentId": {
+                    "description": "上级菜单",
+                    "type": "integer"
                 },
                 "modelName": {
                     "description": "实体名称",
@@ -2710,12 +2675,8 @@
                     "description": "模块名称",
                     "type": "string"
                 },
-                "paramName": {
-                    "description": "参数名称",
-                    "type": "string"
-                },
-                "tableComment": {
-                    "description": "表注释",
+                "tableDescription": {
+                    "description": "表描述",
                     "type": "string"
                 },
                 "tableName": {
@@ -2735,8 +2696,8 @@
                     "description": "代码类型",
                     "type": "string"
                 },
-                "columnComment": {
-                    "description": "字段注释",
+                "columnDescription": {
+                    "description": "字段描述",
                     "type": "string"
                 },
                 "columnName": {
@@ -2747,8 +2708,16 @@
                     "description": "字段类型",
                     "type": "string"
                 },
+                "componentType": {
+                    "description": "组件类型",
+                    "type": "string"
+                },
                 "createdAt": {
                     "description": "创建时间",
+                    "type": "string"
+                },
+                "dictCode": {
+                    "description": "字典代码",
                     "type": "string"
                 },
                 "id": {
@@ -2771,7 +2740,7 @@
                     "description": "是否查询字段（0否 1是）",
                     "type": "boolean"
                 },
-                "jsonField": {
+                "paramName": {
                     "description": "参数名称",
                     "type": "string"
                 },
@@ -2796,12 +2765,12 @@
                     "description": "业务名称",
                     "type": "string"
                 },
-                "functionName": {
-                    "description": "功能名称",
-                    "type": "string"
-                },
                 "id": {
                     "description": "编号",
+                    "type": "integer"
+                },
+                "menuParentId": {
+                    "description": "上级菜单",
                     "type": "integer"
                 },
                 "modelName": {
@@ -2812,12 +2781,8 @@
                     "description": "模块名称",
                     "type": "string"
                 },
-                "paramName": {
-                    "description": "参数名称",
-                    "type": "string"
-                },
-                "tableComment": {
-                    "description": "表注释",
+                "tableDescription": {
+                    "description": "表描述",
                     "type": "string"
                 },
                 "tableName": {
@@ -2833,31 +2798,38 @@
                     "description": "业务名称",
                     "type": "string"
                 },
+                "columnList": {
+                    "description": "字段列表",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.SysGenTableColumnVo"
+                    }
+                },
                 "createdAt": {
                     "description": "创建时间",
                     "type": "string"
                 },
-                "functionName": {
-                    "description": "功能名称",
-                    "type": "string"
-                },
                 "id": {
+                    "type": "integer"
+                },
+                "menuParentId": {
+                    "description": "上级菜单",
                     "type": "integer"
                 },
                 "modelName": {
                     "description": "实体名称",
                     "type": "string"
                 },
+                "moduleAlias": {
+                    "description": "模块别名",
+                    "type": "string"
+                },
                 "moduleName": {
                     "description": "模块名称",
                     "type": "string"
                 },
-                "paramName": {
-                    "description": "参数名称",
-                    "type": "string"
-                },
-                "tableComment": {
-                    "description": "表注释",
+                "tableDescription": {
+                    "description": "表描述",
                     "type": "string"
                 },
                 "tableName": {
@@ -3419,10 +3391,6 @@
                     "description": "业务名称",
                     "type": "string"
                 },
-                "functionName": {
-                    "description": "功能名称",
-                    "type": "string"
-                },
                 "modelName": {
                     "description": "实体名称",
                     "type": "string"
@@ -3431,12 +3399,8 @@
                     "description": "模块名称",
                     "type": "string"
                 },
-                "paramName": {
-                    "description": "参数名称",
-                    "type": "string"
-                },
-                "tableComment": {
-                    "description": "表注释",
+                "tableDescription": {
+                    "description": "表描述",
                     "type": "string"
                 },
                 "tableName": {
